--- a/plots/24_iran_collab_geo_heatmap_GO.html
+++ b/plots/24_iran_collab_geo_heatmap_GO.html
@@ -164,7 +164,13 @@
 
 /* ===== Mobile: true 85/15 split ===== */
 /* Portrait (vertical): use split layout */
+/* Portrait (vertical): use split layout */
 @media (orientation: portrait) {
+  :root {
+    --nav-h: 72px; /* adjust: 64–84px usually perfect */
+    --safe-bottom: env(safe-area-inset-bottom, 0px);
+  }
+
   html, body {
     height: 100%;
     margin: 0;
@@ -174,12 +180,13 @@
   body {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100dvh; /* ✅ dynamic viewport (fixes Android URL bar/gesture bar issues) */
+    overflow: hidden;
   }
 
   .main-frame {
-    flex: 0 0 85vh;
-    height: 85vh;
+    height: calc(100dvh - var(--nav-h) - var(--safe-bottom));
+    flex: 0 0 auto;
     min-height: 0;
     overflow: hidden;
     position: relative;
@@ -194,28 +201,29 @@
   }
 
   .overlay-nav {
-    position: relative;
-    top: auto;
-    left: auto;
-    flex: 0 0 15vh;
-    height: 15vh;
+    height: calc(var(--nav-h) + var(--safe-bottom));
+    flex: 0 0 auto;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+
     border-top: 1px solid rgba(148,163,184,0.45);
     background: rgba(255,255,255,0.92);
     backdrop-filter: blur(10px);
     box-shadow: 0 -8px 20px rgba(15,23,42,0.08);
+
+    padding-bottom: var(--safe-bottom); /* ✅ keeps buttons above Android/iPhone system bars */
   }
 
   .overlay-nav .nav-btn {
-    width: 46px;
-    height: 46px;
+    width: 48px;
+    height: 48px;
     font-size: 22px;
     border-radius: 14px;
   }
 }
+
 
 /* Landscape: keep overlay style */
 @media (orientation: landscape) {
